force-app/main/default/objects/Translation__c/Translation__c.object-meta.xml
<CustomObject>
    <description>Represents a specific translation of an existing record. This object should have a lookup relationship to the object it is a translation of.</description>
    <label>Translation</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>