force-app/main/default/objects/Translation__c/fields/Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the translated record has been acknowledged as complete</description>
    <label>Acknowledged</label>
    <type>Checkbox</type>
</CustomField>