force-app/main/default/objects/Translation__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The case record this object is a translation of</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>