force-app/main/default/objects/Translation__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The name of the field on Object Name to be translated.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>