force-app/main/default/objects/Translation__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>The job id (order id) of the submitted translation</description>
    <label>Job Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>