force-app/main/default/objects/Translation__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>The id of the order associated with the translation job</description>
    <label>Order Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>