force-app/main/default/objects/Translation__c/fields/Slug__c.field-meta.xml
<CustomField>
    <fullName>Slug__c</fullName>
    <description>The title of the submitted translation</description>
    <label>Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>