force-app/main/default/objects/Translation__c/fields/Source_Content__c.field-meta.xml
<CustomField>
    <fullName>Source_Content__c</fullName>
    <description>The original content to be translated</description>
    <label>Source Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>