force-app/main/default/objects/Translation__c/fields/Source_Language__c.field-meta.xml
<CustomField>
    <fullName>Source_Language__c</fullName>
    <description>The ISO code of the language in the original record</description>
    <label>Source Language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>