force-app/main/default/objects/Translation__c/fields/Source_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Language_Code__c</fullName>
    <description>The ISO code of the original language</description>
    <label>Source Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>