force-app/main/default/objects/Translation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the translation</description>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>