force-app/main/default/objects/Translation__c/fields/Target_Language__c.field-meta.xml
<CustomField>
    <fullName>Target_Language__c</fullName>
    <description>The ISO code of the language the original record is to be translated to</description>
    <label>Target Language</label>
    <length>2</length>
    <type>Text</type>
</CustomField>