force-app/main/default/objects/Translation__c/fields/Target_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Target_Language_Code__c</fullName>
    <description>The ISO code of the target language</description>
    <label>Target Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>