force-app/main/default/objects/Translation__c/fields/Translated_Content__c.field-meta.xml
<CustomField>
    <fullName>Translated_Content__c</fullName>
    <description>Contains the translated content of the original source record field</description>
    <label>Translated Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>